--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 html, body{
     margin: 0;
 }
@@ -13,4 +14,5 @@ body{
     width: 100%;
     height:100%;
     overflow-y: scroll;
+    font-family: 'Noto Sans', sans-serif;
 }
