--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@ body{
 #root{
     width: 100%;
     height:100%;
+    max-width: 1440px;
     overflow-y: scroll;
     font-family: 'Noto Sans', sans-serif;
+    margin: 0 auto;
 }
